--- a/NewsTagil/src/main/res/layout/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_contact_content.xml
@@ -1,8 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@color/lightGray"
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/lightGray"
         >
     <ScrollView
             android:layout_width="fill_parent"
@@ -49,7 +49,7 @@
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:textColor="#ff474747"
                                 android:textSize="14dp"
-                            android:text="32 года. Нижний Тагил"
+                            android:text=""
                             android:id="@+id/composite_contact_content_info"/>
                     <Button
                                 android:layout_width="200dp"
