Переверстан settings, обновлене manifest для того чтобы был разрешен только portrait orientaition

--- a/NewsTagil/src/main/res/layout-large/composite_setting_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_setting_content.xml
@@ -25,52 +25,38 @@
                 android:id="@+id/textView"
                 android:layout_gravity="center"/>
     </LinearLayout>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/linearLayout"
-            android:background="@drawable/border_img"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/edge">
-
-        <CheckBox
-                android:layout_width="wrap_content"
+    <RadioGroup android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_marginLeft="25dp"
+                android:layout_below="@+id/linearLayout"
+                android:id="@+id/autoupdate_mode_selector"
+            >
+
+        <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/border_img"
+                style="@android:style/Widget.CompoundButton.CheckBox"
                 android:text="EDGE/3G"
+                android:paddingLeft="@dimen/margin_left"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_edge"
                 android:layout_gravity="left|center_vertical"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/border_img"
-            android:layout_below="@+id/edge"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/wifi">
-
-        <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_marginLeft="25dp"
+        <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/border_img"
                 android:text="WIFI"
+                android:paddingLeft="@dimen/margin_left"
+                style="@android:style/Widget.CompoundButton.CheckBox"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_wifi"
                 android:layout_gravity="left|center_vertical"/>
-    </LinearLayout>
-
+</RadioGroup>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="20dp"
-            android:layout_below="@+id/wifi"
+            android:layout_below="@+id/autoupdate_mode_selector"
             android:background="#fffd8001"
             android:layout_centerHorizontal="true"
             android:id="@+id/linearLayout2">
@@ -104,7 +90,7 @@
                 android:text="Настройка шрифтов"
                 android:textSize="16dp"
                 android:layout_marginTop="14dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="@dimen/margin_left"
                 android:textColor="#ff474747"
                 android:id="@+id/setting_content_font_setting"
                 android:layout_gravity="left"/>
@@ -123,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
                 android:textSize="16dp"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="@dimen/margin_left"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Справка"
                 android:textColor="#ff474747"
