--- a/NewsTagil/src/main/res/layout-small/composite_setting_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_setting_content.xml
@@ -40,7 +40,7 @@
                 android:text="EDGE/3G"
                 style="@android:style/Widget.CompoundButton.CheckBox"
                 android:textColor="#ff474747"
-                android:id="@+id/setting_content_edge"
+                android:id="@+id/setting_content_3G"
                 android:layout_gravity="left|center_vertical"/>
         <RadioButton
                 android:layout_width="match_parent"
