--- a/NewsTagil/src/main/res/layout-small/composite_header.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_header.xml
@@ -123,7 +123,7 @@
                             android:textSize="10dp"
                             android:layout_marginLeft="5dp"
                             android:layout_toRightOf="@+id/composite_header_now"
-                            android:layout_alignTop="@+id/composite_header_now"
+
                             android:layout_alignBottom="@+id/composite_header_now"/>
 
                    <TextView
@@ -145,7 +145,7 @@
                             android:textColor="#FC8000"
                             android:textSize="10dp"
                             android:layout_marginLeft="5dp"
-                            android:layout_alignTop="@+id/composite_header_tomorrow"
+
                             android:layout_toRightOf="@+id/composite_header_tomorrow"
                             android:layout_alignBottom="@+id/composite_header_tomorrow"/>
                 </RelativeLayout>
@@ -160,7 +160,8 @@
                 <EditText
                     android:id="@+id/composite_header_search"
                     android:layout_width="150dp"
-                    android:layout_height="20dp"
+                    android:layout_height="25dp"
+                    android:textSize="10dp"
                     android:layout_marginTop="2dp"
                     android:background="@drawable/first_header_search" >
 
