--- a/NewsTagil/src/main/res/layout-xlarge/composite_header.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_header.xml
@@ -124,7 +124,7 @@
                             android:textSize="25dp"
                             android:layout_marginLeft="5dp"
                             android:layout_toRightOf="@+id/composite_header_now"
-                            android:layout_alignTop="@+id/composite_header_now"
+
                             android:layout_alignBottom="@+id/composite_header_now"/>
 
                    <TextView
@@ -146,7 +146,7 @@
                             android:textColor="#FC8000"
                             android:textSize="25dp"
                             android:layout_marginLeft="5dp"
-                            android:layout_alignTop="@+id/composite_header_tomorrow"
+
                             android:layout_toRightOf="@+id/composite_header_tomorrow"
                             android:layout_alignBottom="@+id/composite_header_tomorrow"/>
                 </RelativeLayout>
@@ -161,7 +161,8 @@
                 <EditText
                     android:id="@+id/composite_header_search"
                     android:layout_width="350dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
+                    android:textSize="25dp"
                     android:layout_marginTop="6dp"
                     android:background="@drawable/first_header_search" >
 
