--- a/NewsTagil/src/main/res/drawable/right_border.xml
+++ b/NewsTagil/src/main/res/drawable/right_border.xml
@@ -6,7 +6,7 @@
             <solid android:color="@color/borderColor"/>
         </shape>
     </item>
-    <item android:bottom="1dp" >
+    <item android:right="1dp" android:bottom="1dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/AppBackground"/>
         </shape>
