--- a/NewsTagil/src/main/res/layout-large/activity_login.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_login.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/login_bg"
+                android:paddingBottom="110dp"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context=".MainActivity" >
 
     <EditText
         android:id="@+id/login"
@@ -18,7 +18,6 @@
         android:textColor="#fff"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true">
-
     </EditText>
 
     <EditText
@@ -29,9 +28,9 @@
         android:ems="10"
         android:textColor="#fff"
         android:inputType="textPassword"
-        android:layout_below="@+id/login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"/>
+        android:layout_marginBottom="150dp"
+        android:layout_above="@+id/reg"
+        android:layout_alignLeft="@+id/login"/>
 
     <Button
         android:id="@+id/reg"
@@ -41,9 +40,9 @@
         android:textSize="18dp"
         android:textColor="#ff474747"
         android:text="Зарегистрироваться"
-        android:layout_below="@+id/pass"
+        android:layout_above="@+id/enter"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp"/>
+        />
 
     <Button
         android:id="@+id/enter"
@@ -54,8 +53,9 @@
         android:textColor="#ff474747"
         android:background="@drawable/empty_bg"
         android:textSize="30dp"
-        android:layout_below="@+id/reg"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"/>
+
+        />
 
 </RelativeLayout>
