--- a/NewsTagil/src/main/res/layout-large/activity_reg.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_reg.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/reg_bg"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="250dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="310dp"
     tools:context=".MainActivity" >
 
     <Button
@@ -14,10 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
+
         android:background="@drawable/empty_bg"
         android:text="Зарегистрироваться"
         android:textSize="28dp"
-        android:layout_below="@+id/reg_pass"
+       android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 
     <EditText
@@ -27,9 +28,10 @@
         android:ems="10"
         android:background="@drawable/login_pass_bg"
         android:inputType="textPassword"
-        android:layout_below="@+id/reg_login"
+
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"/>
+        android:layout_marginTop="14dp"
+        android:layout_above="@+id/button_reg"/>
 
     <EditText
         android:id="@+id/reg_mail"
@@ -39,7 +41,7 @@
         android:background="@drawable/reg_mail_bg"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:layout_above="@+id/reg_login"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 
     <EditText
