--- a/NewsTagil/src/main/res/layout-xlarge/composite_header_simple.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_header_simple.xml
@@ -117,6 +117,7 @@
                         android:textColor="#FC8000"
                         android:textSize="16dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_alignTop="@+id/composite_header_simple_text_tomorrow"
                         android:layout_toRightOf="@+id/composite_header_simple_text_tomorrow"
                         android:layout_alignBottom="@+id/composite_header_simple_text_tomorrow"/>
             </RelativeLayout>
