--- a/NewsTagil/src/main/res/layout/composite_header.xml
+++ b/NewsTagil/src/main/res/layout/composite_header.xml
@@ -74,7 +74,7 @@
 
         <LinearLayout
             android:layout_width="150dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical" >
@@ -116,7 +116,6 @@
                             android:layout_height="wrap_content"
                             android:textColor="#FC8000"
                             android:textSize="10dp"
-                            android:layout_alignBaseline="@+id/composite_header_now"
                             android:layout_alignBottom="@+id/composite_header_now"
                             android:layout_toRightOf="@+id/composite_header_now"
                             android:layout_marginLeft="5dp"/>
@@ -138,8 +137,8 @@
                             android:textColor="#FC8000"
                             android:textSize="10dp"
                             android:layout_below="@+id/composite_header_weather_now"
-                            android:layout_alignLeft="@+id/composite_header_weather_now"
-                            android:layout_marginLeft="5dp"/>
+                            android:layout_alignBottom="@+id/composite_header_tomorrow"
+                            android:layout_alignLeft="@+id/composite_header_weather_now" />
 
                 </RelativeLayout>
 
@@ -153,9 +152,10 @@
                 <EditText
                     android:id="@+id/composite_header_search"
                     android:layout_width="150dp"
-                    android:layout_height="20dp"
+                    android:layout_height="25dp"
                     android:layout_marginTop="2dp"
                     android:lines="1"
+                    android:textSize="10dp"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:background="@drawable/first_header_search" >
