--- a/NewsTagil/src/main/res/layout/composite_header_simple.xml
+++ b/NewsTagil/src/main/res/layout/composite_header_simple.xml
@@ -120,8 +120,9 @@
                             android:textColor="#FC8000"
                             android:textSize="10dp"
                             android:layout_toRightOf="@+id/composite_header_simple_text_tomorrow"
+                            android:layout_marginLeft="5dp"
                             android:layout_alignBottom="@+id/composite_header_simple_text_tomorrow"
-                            android:layout_marginLeft="5dp"/>
+                            android:layout_alignTop="@+id/composite_header_simple_text_tomorrow"/>
                 </RelativeLayout>
 
             </LinearLayout>
