THE GRAND FINAL (chapter 1)

--- a/NewsTagil/src/main/res/layout-large/composite_ads_selector.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_ads_selector.xml
@@ -13,7 +13,7 @@
             android:textSize="16dp"
             android:layout_weight="1"
             android:id="@+id/composite_ads_first_tab"
-            android:background="@drawable/border_img"
+            android:background="@drawable/right_border"
             />
 
     <Button
@@ -24,7 +24,7 @@
             android:textSize="16dp"
             android:layout_weight="1"
             android:id="@+id/composite_ads_second_tab"
-            android:background="@drawable/border_img"
+            android:background="@drawable/right_border"
             />
 
 </LinearLayout>
