--- a/NewsTagil/src/main/res/layout-xlarge/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_make_ads_content.xml
@@ -67,7 +67,7 @@
 
             <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/massage_border_bg"
@@ -92,10 +92,11 @@
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="120dp"
+                    android:minHeight="200dp"
                     android:background="@drawable/massage_border_bg"
                     android:inputType="textMultiLine"
-
+                    android:textAlignment="gravity"
+                    android:gravity="top"
                     android:layout_marginRight="20dp"
                     android:id="@+id/composite_make_ads_content"
                     android:layout_alignParentLeft="true"
@@ -103,7 +104,7 @@
 
             <Button
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:textColor="#fffd8001"
                     android:textSize="22dp"
