--- a/NewsTagil/src/main/res/layout/composite_ads_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_ads_content.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
+
     android:background="#ECE8E2"
    >
 
@@ -10,60 +11,67 @@
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/border_img"
             android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/bottom_border"
             android:layout_below="@+id/nav_buttons">
 
 
         <ImageView
                 android:layout_width="90dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_height="90dp"
-                android:background="@drawable/border_img"
+
                 android:id="@+id/composite_ads_imageView"
-                android:layout_gravity="center"/>
+                android:layout_gravity="top|left"/>
 
 
-        <LinearLayout
-                android:orientation="vertical"
+        <RelativeLayout
+               android:layout_height="match_parent"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp"
                 android:layout_below="@+id/nav_buttons">
 
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Продам корову"
+
                     android:textColor="#ff474747"
                     android:textSize="12dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
+
+                    android:singleLine="true"
+
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
                     android:id="@+id/composite_ads_title"/>
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Сергей Смирнов"
+
+
                     android:textColor="#ff474747"
                     android:textSize="14dp"
-
+                    android:layout_below="@+id/composite_ads_title"
                     android:id="@+id/composite_ads_name"/>
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="13.13.13"
+
                     android:layout_marginLeft="10dp"
                     android:textColor="#fffd8001"
                     android:textSize="10dp"
+                    android:layout_below="@+id/composite_ads_name"
                     android:id="@+id/composite_ads_date"
-                    android:layout_gravity="left|center_vertical"/>
+                  />
 
             <ImageView
                     android:layout_width="30dp"
@@ -71,10 +79,11 @@
                     android:layout_marginLeft="170dp"
                     android:src="@drawable/star_button"
                     android:id="@+id/composite_ads_favorite"
-                    android:layout_gravity="left|center_vertical"/>
+                                        android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 
