--- a/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_make_ads_content.xml
@@ -64,7 +64,7 @@
 
             <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="30dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/massage_border_bg"
@@ -89,19 +89,20 @@
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="40dp"
+                    android:minHeight="80dp"
                     android:background="@drawable/massage_border_bg"
                     android:inputType="textMultiLine"
                     android:ems="10"
                     android:layout_marginRight="20dp"
                     android:id="@+id/composite_make_ads_content"
-                    android:layout_gravity="left|center_vertical"
+                    android:textAlignment="gravity"
+                    android:gravity="top"
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/ContentTextView"/>
 
             <Button
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:textColor="#fffd8001"
                     android:background="@drawable/empty_bg"
