--- a/NewsTagil/src/main/res/layout-xlarge/composite_read_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_read_ads_content.xml
@@ -60,7 +60,7 @@
             android:layout_centerHorizontal="true">
 
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:textColor="#fff"
                 android:textSize="18dp"
@@ -72,7 +72,7 @@
                 />
 
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:textColor="#fff"
                 android:textSize="18dp"
