--- a/NewsTagil/src/main/res/layout/composite_make_ads_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_make_ads_content.xml
@@ -69,7 +69,7 @@
 
             <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="35dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/massage_border_bg"
@@ -99,13 +99,15 @@
                     android:layout_marginRight="20dp"
                     android:background="@drawable/massage_border_bg"
                     android:inputType="textMultiLine"
+                    android:textAlignment="gravity"
+                    android:gravity="top"
                     android:id="@+id/composite_make_ads_content"
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/ContentTextView"/>
 
             <Button
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_marginRight="20dp"
                     android:layout_height="30dp"
                     android:textColor="#fffd8001"
