--- a/NewsTagil/src/main/res/layout/composite_message_in.xml
+++ b/NewsTagil/src/main/res/layout/composite_message_in.xml
@@ -48,6 +48,7 @@
                android:layout_height="wrap_content"
                android:textColor="@color/Orange"
                android:layout_marginLeft="3dp"
+               android:textSize="10dp"
                android:id="@+id/composite_message_date"
                />
        <TextView
@@ -55,6 +56,7 @@
                android:layout_height="wrap_content"
                android:textColor="@color/Orange"
                android:layout_marginLeft="3dp"
+               android:textSize="10dp"
                android:id="@+id/composite_message_time"
                android:layout_below="@+id/composite_message_date"
                />
