--- a/NewsTagil/src/main/res/layout/composite_message_textarea.xml
+++ b/NewsTagil/src/main/res/layout/composite_message_textarea.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="10dp"
     android:background="@color/AppBackground"
     >
-    <EditText
+    <ru.news.tagil.utility.myEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="3"
