--- a/NewsTagil/src/main/res/layout/composite_read_ads_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_read_ads_content.xml
@@ -64,7 +64,7 @@
             android:layout_centerHorizontal="true">
 
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:textColor="#fff"
                 android:textSize="14dp"
@@ -76,7 +76,7 @@
                 />
 
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:textColor="#fff"
                 android:textSize="14dp"
