--- a/NewsTagil/src/main/res/layout-small/composite_second_button_nav.xml
+++ b/NewsTagil/src/main/res/layout-small/composite_second_button_nav.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/like"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/second_nav_like"
@@ -25,7 +25,7 @@
         <ImageView
             android:id="@+id/comment"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/second_nav_comment"
@@ -35,7 +35,7 @@
         <ImageView
             android:id="@+id/elect"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/second_nav_elect"
