--- a/NewsTagil/src/main/res/layout-xlarge/composite_second_button_nav.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_second_button_nav.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/like"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="fitXY"
@@ -23,7 +23,7 @@
 
         <ImageView
             android:id="@+id/comment"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/xlarge_second_button_height"
             android:layout_weight="1"
             android:background="@color/lightGray"
@@ -32,7 +32,7 @@
 
         <ImageView
             android:id="@+id/elect"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/xlarge_second_button_height"
             android:layout_weight="1"
             android:background="@color/lightGray"
