--- a/NewsTagil/src/main/res/layout/composite_second_button_nav.xml
+++ b/NewsTagil/src/main/res/layout/composite_second_button_nav.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/like"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/second_button_height"
             android:layout_weight="1"
             android:src="@drawable/second_nav_like"
@@ -23,7 +23,7 @@
         <ImageView
             android:id="@+id/comment"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/second_button_height"
             android:layout_weight="1"
             android:src="@drawable/second_nav_comment"
@@ -33,7 +33,7 @@
         <ImageView
             android:id="@+id/elect"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/second_button_height"
             android:layout_weight="1"
             android:src="@drawable/second_nav_elect"
