--- a/NewsTagil/src/main/res/layout-xlarge/composite_header_simple.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_header_simple.xml
@@ -59,7 +59,7 @@
 
 
         <LinearLayout
-                android:layout_width="133dp"
+                android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="20dp"
@@ -90,7 +90,7 @@
 
                 <TextView
                         android:id="@+id/composite_header_simple_weather_now"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="#FC8000"
                         android:textSize="16dp"
@@ -112,7 +112,7 @@
 
                 <TextView
                         android:id="@+id/composite_header_simple_weather_tomorrow"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="#FC8000"
                         android:textSize="16dp"
