--- a/NewsTagil/src/main/res/layout/composite_header_simple.xml
+++ b/NewsTagil/src/main/res/layout/composite_header_simple.xml
@@ -58,7 +58,7 @@
         </RelativeLayout>
 
         <LinearLayout
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
@@ -93,7 +93,7 @@
 
                     <TextView
                             android:id="@+id/composite_header_simple_weather_now"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#FC8000"
                             android:textSize="10dp"
@@ -115,7 +115,7 @@
 
                     <TextView
                             android:id="@+id/composite_header_simple_weather_tomorrow"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#FC8000"
                             android:textSize="10dp"
