--- a/NewsTagil/src/main/res/layout/composite_message_out.xml
+++ b/NewsTagil/src/main/res/layout/composite_message_out.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:background="@color/AppBackground"
    >
 
