--- a/NewsTagil/src/main/res/layout/composite_tape_preview.xml
+++ b/NewsTagil/src/main/res/layout/composite_tape_preview.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_border"
+    android:background="@color/AppBackground"
     tools:context=".activity.activityNewsPreview"
-    android:paddingBottom="5dp"
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp"
     >
     <RelativeLayout
            android:layout_width="wrap_content"
@@ -62,12 +63,24 @@
         <ru.news.tagil.utility.myTextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+
                 android:textSize="27sp"
+                android:textStyle="bold"
                 android:minLines="2"
                 android:textColor="@color/Black"
                 android:id="@+id/composite_tape_preview_name_post"
                 android:layout_marginLeft="4dp"
+                />
+        <ru.news.tagil.utility.myTextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+
+                android:textSize="27sp"
+                android:textColor="@color/Black"
+                android:id="@+id/composite_tape_preview_text_post"
+                android:layout_marginLeft="4dp"
+                android:layout_below="@+id/composite_tape_preview_name_post"
+                android:layout_alignLeft="@+id/composite_tape_preview_name_post"
                 />
     </RelativeLayout>
 </RelativeLayout>
