--- a/NewsTagil/src/main/res/values/styles.xml
+++ b/NewsTagil/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="darkEditText">
+        <item name="android:textColor">@color/lightGray</item>
+    </style>
+
 </resources>
